Fixed h2 font size on mobile devices

--- a/home/styles/home-style.css
+++ b/home/styles/home-style.css
@@ -278,6 +278,10 @@ section.section-dark {
         width: 100%;
     }
 
+    h2 {
+        font-size: 10vw;
+    }
+
     section {
         padding-left: 2.5%;
         padding-right: 2.5%;
